--- a/references.bib
+++ b/references.bib
@@ -1465,6 +1465,21 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Wright1996,
+       author = {{Wright}, Andrew N. and {Allan}, W.},
+        title = "{Structure, phase motion, and heating within Alfv{\'e}n resonances}",
+      journal = {Journal of Geophysical Research},
+     keywords = {Interplanetary Physics: MHD waves and turbulence, Magnetospheric Physics: MHD waves and instabilities, Space Plasma Physics: Kinetic and MHD theory, Space Plasma Physics: Waves and instabilities},
+         year = 1996,
+        month = aug,
+       volume = {101},
+       number = {A8},
+        pages = {17399-17408},
+          doi = {10.1029/96JA01141},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1996JGR...10117399W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Wright2016,
        author = {{Wright}, Andrew N. and {Elsden}, Thomas},
         title = "{The Theoretical Foundation of 3D Alfv{\'e}n Resonances: Normal Modes}",
