Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,8 @@
 \usepackage{mathtools}
 \usepackage{wrapfig}
 \usepackage{setspace}
+\usepackage[font=footnotesize]{caption}
+
 \setcounter{chapter}{-1}
 
 \newcommand{\changeurlcolor}[1]{\hypersetup{urlcolor=#1}}
