Updates from Overleaf

--- a/abstract.tex
+++ b/abstract.tex
@@ -22,7 +22,7 @@
 \textbf{Background:} 
 % The Sun is a massive and highly dynamic ball of ionised gas (plasma) with a magnetic field extending throughout the solar system. The plasma is frozen to the magnetic field and so magneto-kinetic waves, i.e. propagating oscillations in kinetic and magnetic energy are ubiquitous in the solar atmosphere. 
 % This thesis uses the fundamental equations of magnetohydrodynamics (the MHD equations) to build our understanding of wave behaviour in the solar corona. The MHD equations bring together equations from hydrodynamics (the study of non-ionised fluids) with Maxwell's electromagnetic equations. This means that the dynamics of plasma shares a lot of properties with the dynamics of non-ionised fluids, however, some phenomena occurs exclusively in plasma and cannot occur in a regular non-ionised fluid. 
-The sun is a massive and highly dynamic ball of plasma, and magneto-kinetic waves (oscillations in kinetic and magnetic energy) are commonplace throughout its atmosphere. Since the plasma conducts electricity, we model the fluid using magnetohydrodynamics (MHD) instead of hydrodynamics which is usually used for non-ionised fluids. We study two MHD wave phenomena called phase mixing and resonant absorption. These are both phenomena which occur exclusively in MHD fluids and cannot occur in hydrodynamic fluids. We study their implications for the coronal heating problem and coronal seismology. We also use line-tied boundary conditions and test their applicability to the solar atmosphere. Line-tied boundary conditions enforce zero velocity. They are often used in the literature for their convenience and can simulate steep jump in density from the corona to the chromosphere.
+The sun is a massive and highly dynamic ball of plasma, and magneto-kinetic waves (oscillations in kinetic and magnetic energy) are commonplace throughout its atmosphere. Since the plasma conducts electricity, we model the fluid using magnetohydrodynamics (MHD) instead of hydrodynamics which is usually used for non-ionised fluids. We study two MHD wave phenomena called phase mixing and resonant absorption. These are both phenomena which occur exclusively in MHD fluids and cannot occur in hydrodynamic fluids. We study their implications for the coronal heating problem and coronal seismology. The solar surface is significantly denser than the atmosphere and we model it as solid wall. In other words, we impose line-tied boundary conditions at the solar surface where the velocity is set equal to zero.
 % The coronal heating problem relates to the question; `why is the corona approximately $10^6\si{.K}$ while the photosphere which is closer to the centre of the Sun is only about $10^4\si{.K}$?' Coronal seismology is a technique where mathematical models are used to infer hard to measure quantities, e.g. the coronal magnetic field strength or density gradients from easier to measure quantities e.g. wave frequencies and damping time.
 
 \textbf{Aims:}
