--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,7 @@
 \usepackage{wrapfig}
 \usepackage{setspace}
 \usepackage[font=footnotesize]{caption}
+\usepackage[toc,page]{appendix}
 
 \setcounter{chapter}{-1}
 
@@ -74,9 +75,10 @@
 \label{chap:conclusions_and_future_work}
 \input{chapters/conclusion}
 
-% \appendix
-% \chapter{Appendix Title}
-% \input{chapters/appendix}
+\appendix
+\chapter{Coronal heating by viscous fast waves}
+\label{adx:coronal_heating_by_viscous_fast_waves}
+\input{chapters/appendix}
 
 \bibliographystyle{chicago}
 \bibliography{references}
