--- a/references.bib
+++ b/references.bib
@@ -611,6 +611,24 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Howson2020a,
+       author = {{Howson}, T.~A. and {De Moortel}, I. and {Reid}, J.},
+        title = "{Phase mixing and wave heating in a complex coronal plasma}",
+      journal = {Astronomy \& Astrophysics},
+     keywords = {Sun: corona, Sun: magnetic fields, Sun: oscillations, magnetohydrodynamics (MHD), Astrophysics - Solar and Stellar Astrophysics, Physics - Space Physics},
+         year = 2020,
+        month = apr,
+       volume = {636},
+          eid = {A40},
+        pages = {A40},
+          doi = {10.1051/0004-6361/201937332},
+archivePrefix = {arXiv},
+       eprint = {2003.05226},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020A&A...636A..40H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Howson2020,
        author = {{Howson}, T.~A. and {De Moortel}, I. and {Fyfe}, L.~E.},
         title = "{The effects of driving time scales on heating in a coronal arcade}",
@@ -827,6 +845,111 @@ archivePrefix = "arXiv",
     pages = {138},
       doi = {10.1088/0004-637X/761/2/138},
    adsurl = {https://ui.adsabs.harvard.edu/abs/2012ApJ...761..138M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{McLaughlin2006,
+   author = {{McLaughlin}, J.~A. and {Hood}, A.~W.},
+    title = "{MHD mode coupling in the neighbourhood of a 2D null point}",
+  journal = {Astronomy \& Astrophysics},
+archivePrefix = "arXiv",
+   eprint = {0712.2402},
+ keywords = {magnetohydrodynamics (MHD), waves, Sun: corona, Sun:, magnetic fields, Sun: oscillations},
+     year = 2006,
+    month = nov,
+   volume = 459,
+    pages = {641-649},
+      doi = {10.1051/0004-6361:20065558},
+   adsurl = {http://adsabs.harvard.edu/abs/2006A%26A...459..641M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{McLaughlin2009,
+       author = {{McLaughlin}, J.~A. and {De Moortel}, I. and {Hood}, A.~W. and {Brady}, C.~S.},
+        title = "{Nonlinear fast magnetoacoustic wave propagation in the neighbourhood of a 2D magnetic X-point: oscillatory reconnection}",
+      journal = {Astronomy \& Astrophysics},
+     keywords = {magnetohydrodynamics (MHD), waves, shock waves, Sun: corona, Sun: magnetic fields, Sun: oscillations, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2009,
+        month = jan,
+       volume = {493},
+       number = {1},
+        pages = {227-240},
+          doi = {10.1051/0004-6361:200810465},
+archivePrefix = {arXiv},
+       eprint = {0901.1781},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009A&A...493..227M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{McLaughlin2011a,
+       author = {{McLaughlin}, J.~A. and {de Moortel}, I. and {Hood}, A.~W.},
+        title = "{Phase mixing of nonlinear visco-resistive Alfv{\'e}n waves}",
+      journal = {Astronomy \& Astrophysics},
+     keywords = {magnetohydrodynamics (MHD), magnetic fields, waves, shock waves, Sun: corona, Sun: oscillations, Astrophysics - Solar and Stellar Astrophysics, Mathematical Physics},
+         year = 2011,
+        month = mar,
+       volume = {527},
+          eid = {A149},
+        pages = {A149},
+          doi = {10.1051/0004-6361/201015552},
+archivePrefix = {arXiv},
+       eprint = {1101.5945},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011A&A...527A.149M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{McLaughlin2011,
+   author = {{McLaughlin}, J.~A. and {Hood}, A.~W. and {de Moortel}, I.},
+    title = "{Review Article: MHD Wave Propagation Near Coronal Null Points of Magnetic Fields}",
+  journal = {Space Science Reviews},
+archivePrefix = "arXiv",
+   eprint = {1004.5568},
+ primaryClass = "astro-ph.SR",
+ keywords = {Magnetic fields: coronal, Magnetic fields: models, Waves: magnetohydrodynamic, Waves: propagation, Magnetohydrodynamics},
+     year = 2011,
+    month = jul,
+   volume = 158,
+    pages = {205-236},
+      doi = {10.1007/s11214-010-9654-y},
+   adsurl = {http://adsabs.harvard.edu/abs/2011SSRv..158..205M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{McLaughlin2013,
+       author = {{McLaughlin}, J.~A.},
+        title = "{Phase Mixing of Alfv{\'e}n Waves Near a 2D Magnetic Null Point}",
+      journal = {Journal of Astrophysics and Astronomy},
+     keywords = {Magnetohydrodynamics (MHD){\textemdash}waves{\textemdash}magnetic fields{\textemdash} Sun: atmosphere{\textemdash}corona, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2013,
+        month = sep,
+       volume = {34},
+       number = {3},
+        pages = {223-246},
+          doi = {10.1007/s12036-013-9174-8},
+archivePrefix = {arXiv},
+       eprint = {1407.1743},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013JApA...34..223M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{McLaughlin2016,
+   author = {{McLaughlin}, J.~A.},
+    title = "{Behaviour of Magnetoacoustic Waves in the Neighbourhood of a Two-Dimensional Null Point: Initially Cylindrically Symmetric Perturbations}",
+  journal = {Journal of Astrophysics and Astronomy},
+archivePrefix = "arXiv",
+   eprint = {1607.02363},
+ primaryClass = "astro-ph.SR",
+ keywords = {Magnetohydrodynamics (MHD), waves, magnetic fields, Sun: atmosphere, corona},
+     year = 2016,
+    month = mar,
+   volume = 37,
+      eid = {2},
+    pages = {2},
+      doi = {10.1007/s12036-016-9376-y},
+   adsurl = {http://adsabs.harvard.edu/abs/2016JApA...37....2M},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
