Updates from Overleaf

--- a/titlepage.tex
+++ b/titlepage.tex
@@ -2,7 +2,7 @@
     \begin{center}
         
         \Huge
-        \textbf{Linear magneto-kinetic waves in the solar atmosphere}
+        \textbf{Oscillations in magnetic and kinetic energy in the solar atmosphere}
         
         \vspace{0.5cm}
         \LARGE
