--- a/abstract.tex
+++ b/abstract.tex
@@ -29,14 +29,14 @@ The sun is a massive and highly dynamic ball of plasma, and magneto-kinetic wave
 % \textcolor{red}{The second chapter aims to study the simplest know MHD wave, namely Alfv\'en waves. The goal is to explain some of the key ideas which will be developed throughout this thesis.} After the introduction, the second chapter studies the simplest known MHD wave, namely, Alfv\'en waves. We study the resonances which can form in coronal loops and the effects introduced by allowing waves to leak out of the corona and by switching from a sinusoidal driver to a broadband driver.
 1) Chapter \ref{chap:ideal_footpoint_driven_alfven_waves} aims to introduce some of the key properties of footpoint driven Alfv\'en waves (a type of MHD wave) which are relevant for the rest of this thesis.
 2) Chapter \ref{chap:resistive_phase_mixed_alfven_waves} aims to calculate an upper bound for the heat that can be produced by linear phase-mixed Alfv\'en at observed frequencies and amplitudes to assess its viability as a coronal heating mechanism.
-3) Chapter \ref{chap:resonant_absorption_in_an_oblique_field} aims to test if line-tied boundary conditions apply to resonant absorption simulations in the corona and whether or not they produce fictitious boundary layers.
+3) Chapter \ref{chap:resonant_absorption_in_an_oblique_field} aims to test if line-tied boundary conditions still apply in a resonant absorption experiment where the transverse length-scales can be very short.
 % \textcolor{red}{The fourth chapter aims to test if the boundary layers formed in resonant absorption experiments where the background field is oblique to the transition region are physical or a result of imposing line-tied boundary conditions.} The fourth chapter studies resonant absorption for the case where the background magnetic field is tilted to be oblique to the transition region. Imposing line-tied boundary conditions at the transition region generates large-amplitude boundary layers. We test if these boundary layers are physical and not a fictitious result arising from the use of line-tied boundary conditions.
 
 \textbf{Methods:} We take an analytic and theoretical approach when solving each of these problems. Then check the results numerically.
 
 \textbf{Results:} 1) We show that the growth of energy in closed loops for a sinusoidal footpoint driver is highly dependent on the driver frequency. If a resonance is excited, then the energy grows quadratically with time, and for a broadband driver, the energy grows linearly on average. If the loop is partially-closed (i.e. only a fraction of the wave amplitude reflects at the boundary), the energy will converge towards a steady-state where the loop's energy remains constant with time. 
 2) We calculate an upper bound for the heat that can be produced by phase-mixed Alfv\'en waves and find that it is on average too small to play a significant role in coronal heating. 
-3) We show that imposing line-tied boundary conditions causes the model to overestimate the boundary layers' size significantly. However, we believe researchers should continue to use line-tied boundary conditions for its convenience in their models provided they understand and are aware of its flaws and limitations.
+3) We show that imposing line-tied boundary conditions can cause the model generate unphysically large boundary layers when the transverse length-scales are very short. However, researchers may wish to continue to use them in their models for their simplicity and ability to significantly reduce computation time if they understand and are aware of their flaws.
 % However, the energy of the boundary layers does not grow with time and so we argue its okay to use line-tied boundary conditions in future models provided it is understood that the boundary layers produced are mostly unphysical.
 
 \end{spacing}
