Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,7 @@
 \usepackage[font=footnotesize]{caption}
 \usepackage[toc,page]{appendix}
 
-\setcounter{chapter}{-1}
+% \setcounter{chapter}{-1}
 
 \newcommand{\changeurlcolor}[1]{\hypersetup{urlcolor=#1}}
 \numberwithin{equation}{section}
