Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -398,6 +398,20 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Goossens2011,
+   author = {{Goossens}, M. and {Erd{\'e}lyi}, R. and {Ruderman}, M.~S.},
+    title = "{Resonant MHD Waves in the Solar Atmosphere}",
+  journal = {Solar Science Reviews},
+ keywords = {Plasma, Waves, MHD, Sun},
+     year = 2011,
+    month = jul,
+   volume = 158,
+    pages = {289-338},
+      doi = {10.1007/s11214-010-9702-7},
+   adsurl = {http://cdsads.u-strasbg.fr/abs/2011SSRv..158..289G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Halberstadt1993,
        author = {{Halberstadt}, G. and {Goedbloed}, J.~P.},
         title = "{The continuous Alfv\'en spectrum of line-tied coronal loops}",
@@ -1017,6 +1031,36 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/1999Sci...285..862N},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Nakariakov2005,
+       author = {{Nakariakov}, Valery M. and {Verwichte}, Erwin},
+        title = "{Coronal Waves and Oscillations}",
+      journal = {Living Reviews in Solar Physics},
+     keywords = {Coronal Loop, Resonant Absorption, Torsional Wave, Magnetoacoustic Wave, Kink Mode},
+         year = 2005,
+        month = may,
+       volume = {2},
+       number = {1},
+          eid = {3},
+        pages = {3},
+          doi = {10.12942/lrsp-2005-3},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2005LRSP....2....3N},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Nakariakov2020,
+       author = {{Nakariakov}, Valery M. and {Kolotkov}, Dmitrii Y.},
+        title = "{Magnetohydrodynamic Waves in the Solar Corona}",
+      journal = {Annual Review of Astronomy and Astrophysics},
+         year = 2020,
+        month = aug,
+       volume = {58},
+        pages = {441-481},
+          doi = {10.1146/annurev-astro-032320-042940},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020ARA&A..58..441N},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{Ofman1995,
        author = {{Ofman}, L. and {Davila}, J.~M. and {Steinolfson}, R.~S.},
