Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -119,6 +119,21 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Banerjee2007,
+       author = {{Banerjee}, D. and {Erd{\'e}lyi}, R. and {Oliver}, R. and {O'Shea}, E.},
+        title = "{Present and Future Observing Trends in Atmospheric Magnetoseismology}",
+      journal = {Solar Physics},
+     keywords = {Coronal loops, MHD waves, MHD oscillations},
+         year = 2007,
+        month = nov,
+       volume = {246},
+       number = {1},
+        pages = {3-29},
+          doi = {10.1007/s11207-007-9029-z},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2007SoPh..246....3B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article{Braginskii1965,
   title={Transport processes in a plasma},
   author={{Braginskii}, S.~I.},
@@ -411,6 +426,7 @@ archivePrefix = {arXiv},
    adsurl = {http://cdsads.u-strasbg.fr/abs/2011SSRv..158..289G},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 @ARTICLE{Halberstadt1993,
        author = {{Halberstadt}, G. and {Goedbloed}, J.~P.},
@@ -715,7 +731,21 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
+@ARTICLE{Karimabadi2013,
+       author = {{Karimabadi}, H. and {Roytershteyn}, V. and {Wan}, M. and {Matthaeus}, W.~H. and {Daughton}, W. and {Wu}, P. and {Shay}, M. and {Loring}, B. and {Borovsky}, J. and {Leonardis}, E. and {Chapman}, S.~C. and {Nakamura}, T.~K.~M.},
+        title = "{Coherent structures, intermittent turbulence, and dissipation in high-temperature plasmas}",
+      journal = {Physics of Plasmas},
+     keywords = {astrophysical plasma, plasma Alfven waves, plasma kinetic theory, plasma simulation, plasma temperature, plasma transport processes, plasma turbulence, solar wind, 52.35.Ra, 94.05.Lk, 94.05.Pt, 52.25.Dg, 52.25.Fi, 52.35.Bj, Plasma turbulence, Turbulence, Wave/wave wave/particle interactions, Plasma kinetic equations, Transport properties, Magnetohydrodynamic waves},
+         year = 2013,
+        month = jan,
+       volume = {20},
+       number = {1},
+          eid = {012303},
+        pages = {012303},
+          doi = {10.1063/1.4773205},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013PhPl...20a2303K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 @ARTICLE{Klimchuk2006,
    author = {{Klimchuk}, J.~A.},
@@ -829,6 +859,25 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2010ApJ...714.1290M},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Mathioudakis2013,
+       author = {{Mathioudakis}, M. and {Jess}, D.~B. and {Erd{\'e}lyi}, R.},
+        title = "{Alfv{\'e}n Waves in the Solar Atmosphere. From Theory to Observations}",
+      journal = {Space Science Reviews},
+     keywords = {Sun: Alfv{\'e}n waves, Sun: chromosphere, Sun: corona, Sun: spicules, Plasma wave heating, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2013,
+        month = jun,
+       volume = {175},
+       number = {1-4},
+        pages = {1-27},
+          doi = {10.1007/s11214-012-9944-7},
+archivePrefix = {arXiv},
+       eprint = {1210.3625},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013SSRv..175....1M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{McIntosh2011,
    author = {{McIntosh}, S.~W. and {de Pontieu}, B. and {Carlsson}, M. and 
@@ -1604,6 +1653,42 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Vickers2018,
+       author = {{Vickers}, E. and {Ballai}, I. and {Erd{\'e}lyi}, R.},
+        title = "{Propagation of Leaky MHD Waves at Discontinuities with Tilted Magnetic Field}",
+      journal = {Solar Physics},
+     keywords = {Waves, Dynamics, Magnetic fields, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2018,
+        month = oct,
+       volume = {293},
+       number = {10},
+          eid = {139},
+        pages = {139},
+          doi = {10.1007/s11207-018-1359-5},
+archivePrefix = {arXiv},
+       eprint = {1809.03907},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018SoPh..293..139V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Vickers2020,
+       author = {{Vickers}, E. and {Ballai}, I. and {Erd{\'e}lyi}, R.},
+        title = "{Magnetic Rayleigh-Taylor instability at a contact discontinuity with an oblique magnetic field}",
+      journal = {Astronomy \& Astrophysics},
+     keywords = {magnetohydrodynamics (MHD), instabilities, Sun: filaments, prominences, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2020,
+        month = feb,
+       volume = {634},
+          eid = {A96},
+        pages = {A96},
+          doi = {10.1051/0004-6361/201936490},
+archivePrefix = {arXiv},
+       eprint = {1911.12734},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020A&A...634A..96V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 @ARTICLE{Withbroe1977,
    author = {{Withbroe}, G.~L. and {Noyes}, R.~W.},
