Updates from Overleaf

--- a/titlepage.tex
+++ b/titlepage.tex
@@ -2,7 +2,7 @@
     \begin{center}
         
         \Huge
-        \textbf{Oscillations in magnetic and kinetic energy in the solar atmosphere}
+        \textbf{Magnetohydrodynamic waves in the solar corona}
         
         \vspace{0.5cm}
         \LARGE
@@ -14,9 +14,9 @@
         
         \vspace{1cm}
         
-        A thesis submitted for the degree of PhD at the University of St Andrews
+        This thesis is submitted in partial fulfilment for the degree of Doctor of Philosophy (PhD) at the University of St Andrews
         
-        \vspace{3cm}
+        \vspace{2cm}
         
         \includegraphics[width=0.3\textwidth]{introduction/st-andrews-shield.png}
         
