Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,6 @@
 
 % \setcounter{chapter}{-1}
 
-\newcommand{\changeurlcolor}[1]{\hypersetup{urlcolor=#1}}
 \numberwithin{equation}{section}
 \allowdisplaybreaks
 \pagestyle{fancy}
@@ -46,24 +45,18 @@
 
 \section*{Candidate’s declaration}
 
-I, Alexander Philip Kofi Prokopyszyn, do hereby certify that this thesis, submitted for the
-degree of PhD, which is approximately 30,000 words in length, has been written by
-me, and that it is the record of work carried out by me, or principally by myself in
-collaboration with others as acknowledged, and that it has not been submitted in any
-previous application for any degree.
+I, Alexander Philip Kofi Prokopyszyn, do hereby certify that this thesis, submitted for the degree of PhD, which is approximately 30,000 words in length, has been written by me, and that it is the record of work carried out by me, or principally by myself in collaboration with others as acknowledged, and that it has not been submitted in any previous application for any degree. I confirm that any appendices included in my thesis contain only material permitted by the `Assessment of Postgraduate Research Students' policy.
 \vskip 0.2in
 \noindent I was admitted as a research student at the University of St Andrews in September 2017.
 \vskip 0.2in
-\noindent I received funding from an organisation or institution and have acknowledged the funders in the full text of my thesis.
+\noindent I received funding from an organisation or institution and have acknowledged the funder(s) in the full text of my thesis.
 \vskip 0.2in
 \noindent Date: ............................\quad Signature of candidate:.......................................................
 \vskip 1in
 
 \section*{Supervisor’s declaration}
 
-I hereby certify that the candidate has fulfilled the conditions of the Resolution and
-Regulations appropriate for the degree of PhD in the University of St Andrews and
-that the candidate is qualified to submit this thesis in application for that degree.
+I hereby certify that the candidate has fulfilled the conditions of the Resolution and Regulations appropriate for the degree of PhD in the University of St Andrews and that the candidate is qualified to submit this thesis in application for that degree. I confirm that any appendices included in the thesis contain only material permitted by the `Assessment of Postgraduate Research Students' policy.
 \vskip 0.2in
 \noindent Date: ............................ \quad Signature of supervisor: ......................................................
 
@@ -71,18 +64,9 @@ that the candidate is qualified to submit this thesis in application for that de
 
 \section*{Permission for publication}
 
-In submitting this thesis to the University of St Andrews we understand that we are
-giving permission for it to be made available for use in accordance with the regulations
-of the University Library for the time being in force, subject to any copyright vested in
-the work not being affected thereby. We also understand, unless exempt by an award
-of an embargo as requested below, that the title and the abstract will be published,
-and that a copy of the work may be made and supplied to any bona fide library or
-research worker, that this thesis will be electronically accessible for personal or research
-use and that the library has the right to migrate this thesis into new electronic forms
-as required to ensure continued access to the thesis.
+In submitting this thesis to the University of St Andrews we understand that we are giving permission for it to be made available for use in accordance with the regulations of the University Library for the time being in force, subject to any copyright vested in the work not being affected thereby. We also understand, unless exempt by an award of an embargo as requested below, that the title and the abstract will be published, and that a copy of the work may be made and supplied to any bona fide library or research worker, that this thesis will be electronically accessible for personal or research use and that the library has the right to migrate this thesis into new electronic forms as required to ensure continued access to the thesis.
 \vskip 0.2in
-\noindent I, Alexander Philip Kofi Prokopyszyn, confirm that my thesis does not contain any third-party
-material that requires copyright clearance.
+\noindent I, Alexander Philip Kofi Prokopyszyn, confirm that my thesis does not contain any third-party material that requires copyright clearance.
 \vskip 0.2in
 \noindent The following is an agreed request by candidate and supervisor regarding the publication of this thesis:
 \vskip 0.2in
@@ -99,16 +83,15 @@ material that requires copyright clearance.
 
 \newpage
 
-\section*{Research Data/Digital Outputs access statement}
+\section*{Underpinning research data or digital outputs}
 
-I, Alexander Philip Kofi Prokopyszyn, hereby certify that no requirements to deposit original research data or digital outputs apply to this thesis and that, where appropriate,
-secondary data used have been referenced in the full text of my thesis.
+I, Alexander Philip Kofi Prokopyszyn, hereby certify that no requirements to deposit original research data or digital outputs apply to this thesis and that, where appropriate, secondary data used have been referenced in the full text of my thesis.
 \vskip 0.2in
 \noindent Date: ............................ \quad Signature of candidate: .......................................................
 
 \vskip 0.5in
 
-\section*{Financial Support}
+\section*{Financial support}
 The research leading to the results presented within this thesis has received funding
 from the the Science and Technology Facilities Council (U.K.) through the consolidated grant ST/N000609/1.
 
@@ -133,13 +116,13 @@ the supervision of Prof. Alan Hood, Prof Ineke De Moortel and Dr Andrew Wright.
 
 \section*{Acknowledgements}
 
-I want to thank several people for their help and support in the completion of this thesis.
+I want to thank several people for their aid and support in the completion of this thesis.
 
-Firstly, I am incredibly grateful to my primary supervisor, Alan, for his help and guidance throughout my PhD. His enthusiasm and expertise played a crucial role in making this work possible. I want to thank my co-supervisors, Ineke and Andy. I found Ineke's advice really useful, and she helped make sure I didn't stray off on too many tangents. I found Andy's support and ability to think about problems from a physical and a mathematical perspective very insightful.
+Firstly, I am incredibly grateful to my primary supervisor, Alan, for his help and guidance throughout my PhD. His enthusiasm and expertise played a crucial role in making this work possible. I want to thank my co-supervisors, Ineke and Andy. I found Ineke's advice really useful, and she ensured I didn't stray off on too many tangents. I found Andy's constructive criticism and ability to think about problems from a physical and a mathematical perspective very insightful.
 
 Secondly, I'd like to thank all of the Maths department members and Steve's football players. A special thanks to my office mates and everyone else for the long lunch breaks and interesting conversations. Thanks to Callan for being a great house/office-mate throughout the COVID-19 pandemic.
 
-Last but not least, I would like to thank my family. Thank you to my parents and siblings for always believing me and supporting me through the highs and lows. I am also grateful to Isobel and Ken for their advice and support. Finally, thank you to my siblings Joe, Paul and Sarah.
+Last but not least, I would like to thank my family. Thank you to my parents and siblings for always believing in me and encouraging me through the highs and lows. I am also grateful to Isobel and Ken for their advice and assistance.
  
 \tableofcontents
 
