--- a/references.bib
+++ b/references.bib
@@ -413,6 +413,19 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Goedbloed1994,
+       author = {{Goedbloed}, J.~P. and {Halberstadt}, G.},
+        title = "{Magnetohydrodynamic waves in coronal flux tubes}",
+      journal = {Astronomy \& Astrophysics},
+     keywords = {MHD, WAVES, SUN: CORONA, SUN: MAGNETIC FIELDS},
+         year = 1994,
+        month = jun,
+       volume = {286},
+        pages = {275-301},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1994A&A...286..275G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Goossens2011,
    author = {{Goossens}, M. and {Erd{\'e}lyi}, R. and {Ruderman}, M.~S.},
     title = "{Resonant MHD Waves in the Solar Atmosphere}",
@@ -1465,6 +1478,25 @@ archivePrefix = {arXiv},
        eprint = {0707.3884},
  primaryClass = {astro-ph},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2007A&A...475.1111S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Soler2013,
+       author = {{Soler}, Roberto and {Goossens}, Marcel and {Terradas}, Jaume and {Oliver}, Ram{\'o}n},
+        title = "{The Behavior of Transverse Waves in Nonuniform Solar Flux Tubes. I. Comparison of Ideal and Resistive Results}",
+      journal = {The Astrophysical Journal},
+     keywords = {magnetohydrodynamics: MHD, Sun: atmosphere, Sun: magnetic fields, Sun: oscillations, waves, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2013,
+        month = nov,
+       volume = {777},
+       number = {2},
+          eid = {158},
+        pages = {158},
+          doi = {10.1088/0004-637X/777/2/158},
+archivePrefix = {arXiv},
+       eprint = {1309.3423},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013ApJ...777..158S},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
